--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Open+Sans:wght@300;400;500;700&family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
       <link rel="icon" type="image/svg+xml" href="/vite.svg" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Vite + React</title>
+      <title>Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
